src/tests/fixtures/typename/PropertyTypenameMustNeedToBeDeclaredAsConst.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class User {
    __typename = "User";
    /** @gqlField */
    name: string = "Alice";
  }

-----------------
OUTPUT
-----------------
src/tests/fixtures/typename/PropertyTypenameMustNeedToBeDeclaredAsConst.ts:3:16 - error: Expected \`__typename\` property initializer to be an expression with a const assertion. For example: \`__typename = "MyType" as const\`.

3   __typename = "User";
                 ~~~~~~~
